--- a/AI_CSharp_Assistant/MainWindow.axaml
+++ b/AI_CSharp_Assistant/MainWindow.axaml
@@ -70,7 +70,7 @@
                                                                 </Grid>
                                                         </suki:SideMenuItem.Content>
                                                 </suki:SideMenuItem>
-                                                 <suki:SideMenuItem Header="Code Manipulation" Icon="Code">
+                                                 <suki:SideMenuItem Header="Code" Icon="LanguageCsharp">
                                                         <suki:SideMenuItem.Content>
                                                                 <Grid Background="{DynamicResource SukiBackground}">
                                                                 <TabControl  Margin="0,10,0,0">
@@ -142,6 +142,24 @@
                                                                 </Grid>
                                                         </suki:SideMenuItem.Content>
                                                  </suki:SideMenuItem>
+                                                  <suki:SideMenuItem Header="Xaml" Icon="Code">
+                                                        <suki:SideMenuItem.Content>
+                                                                <Grid Background="{DynamicResource SukiBackground}">
+                                                                <TabControl  Margin="0,10,0,0">
+                                                                        <TabItem>
+                                                                                <TabItem.Header>
+                                                                                        <TextBlock FontSize="17" Text="Avalonia Layout"></TextBlock>
+                                                                                </TabItem.Header>
+                                                                               <views:AxamlGeneratorView>
+                                                                                       <views:AxamlGeneratorView.DataContext>
+                                                                                               <viewModels:AxamlGeneratorVM></viewModels:AxamlGeneratorVM>
+                                                                                       </views:AxamlGeneratorView.DataContext>
+                                                                               </views:AxamlGeneratorView>
+                                                                        </TabItem>
+                                                                </TabControl>
+                                                                </Grid>
+                                                        </suki:SideMenuItem.Content>
+                                                  </suki:SideMenuItem>
                                                                         <suki:SideMenuItem Header="Image Generator" Icon="ImageAddOutline">
                                                         <suki:SideMenuItem.Content>
                                                                 <views:ImageGenView DataContext="{x:Static viewModels:ImageGenVM.Instance}"></views:ImageGenView>
